--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -14,12 +14,11 @@ search
 
 {#자바스크립트 파일 넣는 곳#}
 {% block js %}
+
 {% endblock %}
 
 {#메인 컨텐츠 들어가는 곳#}
 {% block content %}
-    <h1>검색결과창</h1>
-    <p>{{ search }} 를 검색합니다.</p>
 
     {% if error %}
         <h1>No items found for this search</h1>
@@ -30,50 +29,83 @@ search
 <div class = 'item_count'>
      <p class = 'count'>{{ all }} items</p>
 </div>
-    <div class = 'wrap'>
-         {% for drawing in page.object_list %}
-        <article id="card" class = 'box' >
+    <div class = 'wrap' >
+         {% for drawing in page_obj %}
+        <article id="content" class = 'box' >
 
                 <img src="{% static '/img/칸딘 후추1.png' %}" alt="이미지">
             <div class = 'post'>
                 <div class = 'post_left'>
                     <p>owner:{{ drawing.owner }}</p>
-                    <p>title:{{ drawing.description }}</p>
+                    <p>title:{{ drawing.title }}</p>
                 </div>
                 <div class = 'post_right'>
                     <p>{{ drawing.buy_price }}won</p>
                 </div>
             </div>
-
-
-
         </article>
         {% endfor %}
     </div>
     {% endif %}
 
 </div>
-<div class = 'page'>
-    <h5>
-<!--        페이지 표시 부분-->
-        {% if page.has_previous %}
-<!--            이전 페이지가 있는지 check해줘요:)-->
-            <a href="?page={{page.previous_page_number}}&search={{search}}">이전</a>
-        {% endif %}
-        {% if all > 0 %}
-        Page {{ page.number }} of {{ page.paginator.num_pages }}
-        {% endif %}
-        {% if page.has_next %}
-<!--            다음 페이지가 있는지 check해줘요:)-->
-            <a href="?page={{page.next_page_number}}&search={{search}}">다음</a>
-        {% endif %}
-    </h5>
+{#<div class = 'page__aa'>#}
+{#    <h5>#}
+{#<!--        페이지 표시 부분-->#}
+{#        {% if page_obj.has_previous %}#}
+{#<!--            이전 페이지가 있는지 check해줘요:)-->#}
+{#            <a href="?page={{page_obj.previous_page_number}}&search={{search}}">이전</a>#}
+{#        {% endif %}#}
+{#        {% if all > 0 %}#}
+{#        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}#}
+{#        {% endif %}#}
+{#        {% if page_obj.has_next %}#}
+{#<!--            다음 페이지가 있는지 check해줘요:)-->#}
+{#            <a href="?page={{page_obj.next_page_number}}&search={{search}}">다음</a>#}
+{#        {% endif %}#}
+{#    </h5>#}
+{##}
+{#</div>#}
+<script>
+console.log("it's alive!")
 
-</div>
 
+content = document.querySelector(".wrap");
+let page = 1
 
-무한스크롤 테스트
+window.onscroll = function() {
+    url = `?page=${page}&search={{ search }}`
+    // console.log(url)
+    if (window.innerHeight + window.scrollY+3 >= document.body.offsetHeight) {
 
+        fetch(url).then(res => {
+            if (res.ok) {
+                {#console.log(res.json())#}
+                return res.json();
+            }
+        }).then(data => {
+             console.dir(data)
+            page += 1
+            setTimeout(()=>{content.innerHTML += data.map(
+            	obj=>`<article id="content" class = 'box' >
+                <img src="{% static '/img/칸딘 후추1.png' %}" alt="이미지">
+            <div class = 'post'>
+                <div class = 'post_left'>
+                    <p>owner:${obj.owner}</p>
+                    <p>title:${obj.title}</p>
+                </div>
+                <div class = 'post_right'>
+                    <p>${obj.buy_price}won</p>
+                </div>
+            </div>
+        </article>`
+            	).join("\n")},200)
+        }).catch(err => {
 
+        })
+    }
+}
+</script>
+<!--무한스크롤 테스트-->
 {% endblock %}
 
