--- a/static/css/search.css
+++ b/static/css/search.css
@@ -5,38 +5,37 @@
 }
 
 .wrap {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    /*grid-template: 350px/300px 300px 300px 300px;*/
-    grid-template: 1fr 1fr 1fr /19% 19% 19% 19%;
-    grid-gap: 5%;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    width: 1300px;
     justify-content: center;
+
 }
 
 .box {
     border-radius: 10px;
     border: 1px solid lightgray;
-    margin-left: 2%;
+    margin: 2%;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 300px;
     height: 100%;
 }
 
-#card {
+#content {
     z-index: 3;
     cursor: pointer;
 }
 
-#card:hover {
+#content:hover {
     box-shadow: rgb(4 17 29 / 25%) 0px 0px 8px 0px;
     -webkit-transform:scale(1.02);     /*  크롬 */
     transition: all 0.1s ease 0s;
 }
 
 .box img {
-    width: 100%;
+    width: 300px;
     height: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
