--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,7 @@
                 <ul>
                     <li>
                     <span>
-                        {{ user.username }} 님 반갑습니다!
+                        {{ user.nickname }} 님 반갑습니다!
                     </span>
                     </li>
                     <li>
