update - upload html, js

--- a/templates/drawing/upload.html
+++ b/templates/drawing/upload.html
@@ -46,7 +46,7 @@
             <button onclick="go_drawing()">Image drawing</button>
             <button onclick="img_style_change()">Image style change</button>
             <button onclick="url_style()">Style from url</button>
-            <button onclick="posting1()">Create new thing</button>
+            <button onclick="posting(), posting1()">Create new thing</button>
         </div>
         <div id="style_box">
             {% for style in styles %}
