--- a/templates/market/detail.html
+++ b/templates/market/detail.html
@@ -15,31 +15,101 @@ detail
 {#자바스크립트 파일 넣는 곳#}
 {% block js %}
 <script  type="text/javascript" src="{% static '/js/detail.js' %}"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+{#<script type="text/javascript" src="https://www.google.com/jsapi"></script>#}
+{#<script  type="text/javascript">#}
+{#      google.load("visualization", "1", {packages:["corechart"]});#}
+{#      google.setOnLoadCallback(drawChart);#}
+{#      function drawChart() {#}
+{##}
+{#        var prices = [#}
+{#          ['Date', 'Price'],#}
+{#            ['1',  290],#}
+{#            ['2',  300],#}
+{#            ['3', 320]#}
+{#        ]#}
+{#        var data = google.visualization.arrayToDataTable(#}
+{#            prices#}
+{#        );#}
+{#        var options = {#}
+{#          title: 'Price Chart'#}
+{#        };#}
+{#        var chart = new google.visualization.LineChart(document.getElementById('chart_div'));#}
+{#        chart.draw(data, options);#}
+{#      }#}
+{#</script>#}
 {% endblock %}
 
 {#메인 컨텐츠 들어가는 곳#}
 {% block content %}
 <div id="img_detail_box">
     <div id="selleing_img">
-        img 들어가는곳
+        img drawing_id :1
     </div>
     <div id="img_info_area">
 
             <p id="img_title">TITLE</p>
-            <p class="img_detail">Owned by nickname</p>
-            <p class="img_detail">Created by author</p>
-            <p class="img_price">Price : buy_price</p>
+            <button id="btn1" onclick="open_modal();">settings</button>
+            <p class="img_detail">Owned by {{ owner.nickname }}</p>
+            <p class="img_detail">Created by author: {{ drawing.author_id }}</p>
+            <p class="img_price">Price : {{ drawing.buy_price }}</p>
             <p class="img_detail">Description</p>
-            <p id="img_desc">지훈님네 후추는 귀엽습니다.. 광민님의 손길을 거쳐 더 귀엽게 되었어요... 나만 고양이 없어....</p>
+            <p id="img_desc">{{ drawing.description }}</p>
             <div id="price_chart">
                 <p class="img_detail">Price Chart</p>
-                300 (buyer, date), 320 (buyer, date), 290 (buyer, date)
+                price_list: {{ price_list }}
+
+
+                <div id="chart_div"></div>
+
+
         </div>
+
+
     </div>
 </div>
 
 <div id="img_collection">
 
 </div>
+
+    <dialog id="news_detail" class="modal modal_box">
+
+        <button onclick="close_modal()">&times;</button>
+        <form method="POST">
+        {% csrf_token %}
+{#        <input name="title" value="{{ drawing.title }}">#}
+            <input name="title" value="Title">
+            <input name="desc" value="{{ drawing.description }}">
+            <input name="price" value="{{ drawing.buy_price }}">
+            <label for="input-married">On sale</label>
+            <input id="input-married" name="status" type="checkbox"/>
+
+            <button type="submit" >수정하기</button>
+        </form>
+    </dialog>
+
+{#    가격변동차트#}
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script  type="text/javascript">
+      google.load("visualization", "1", {packages:["corechart"]});
+      google.setOnLoadCallback(drawChart);
+      function drawChart() {
+
+        var prices = "{{ price_list }}"
+          console.log(prices)
+        var data = google.visualization.arrayToDataTable(
+          prices
+
+        );
+        var options = {
+          title: 'Price Chart'
+        };
+        var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+</script>
+
+
 {% endblock %}
 
