--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -513,13 +513,14 @@
 
 .move_left_output {
     transition: 2s;
-    transform: translateX(-318px);
+    transform: translateX(-320px);
 }
 
 #output_wrapper {
     display: none;
     justify-content: space-around;
     align-items: center;
+    height: 500px;
 }
 
 #output_wrapper form {
