--- a/templates/market/detail.html
+++ b/templates/market/detail.html
@@ -44,11 +44,11 @@ detail
 {% block content %}
 <div id="img_detail_box">
     <div id="selleing_img">
-        img drawing_id :1
+        <img src="{{ drawing.img }}" alt="">
     </div>
     <div id="img_info_area">
 
-            <p id="img_title">TITLE</p>
+            <p id="img_title">{{ drawing.title }}</p>
             <button id="btn1" onclick="open_modal();">settings</button>
             <p class="img_detail">Owned by {{ owner.nickname }}</p>
             <p class="img_detail">Created by author: {{ drawing.author_id }}</p>
@@ -57,7 +57,7 @@ detail
             <p id="img_desc">{{ drawing.description }}</p>
             <div id="price_chart">
                 <p class="img_detail">Price Chart</p>
-                price_list: {{ price_list }}
+                price_list: {{ price_list|safe }}
 
 
                 <div id="chart_div"></div>
@@ -96,7 +96,7 @@ detail
       google.setOnLoadCallback(drawChart);
       function drawChart() {
 
-        var prices = "{{ price_list }}"
+        var prices = "{{ price_list|safe }}"
           console.log(prices)
         var data = google.visualization.arrayToDataTable(
           prices
