--- a/static/css/search.css
+++ b/static/css/search.css
@@ -1,6 +1,29 @@
+.noresult_wrap{
+    width: 100%;
+
+
+}
+.noresult{
+    border: 1px solid lightgray;
+    border-radius: 20px;
+    padding: 5%;
+    margin-top: 7%;
+    width: 70%;
+    margin-left: 9%;
+}
+.noresult button{
+    width: 18%;
+}
+
+.count_item{
+     text-align: left;
+     margin-left: 3%;
+}
+
 .count {
     text-align: left;
     margin-left: 3%;
+
 
 }
 
@@ -9,8 +32,8 @@
     display: flex;
     flex-wrap: wrap;
     width: 1300px;
-    justify-content: center;
-
+    justify-content: flex-start;
+    margin-left: 10%;
 }
 
 .box {
@@ -45,27 +68,35 @@
     display: flex;
     justify-content: space-between;
     font-weight: bold;
-    font-size: 50%;
+    font-size: 14px;
 
 }
 
 .post_left {
-    /*background-color: green;*/
+    display: flex;
+    margin: 1.7% 1% 1% 1%;
 }
 
 .post_left p {
     text-align: left;
-    margin-left: 0;
-    margin-top: 1px;
+    margin-left: 3px;
+    margin-top: 5%;
     margin-bottom: 0px;
 }
-
+.post_right{
+    margin: 1% 1% 1% 1%;
+}
 .post_right p {
-    /*margin-top: 2px;*/
-    /*margin-bottom: 0px;*/
-    margin: 0 auto;
+    /*margin-top: 3px;*/
+    /*margin-right: 1%;*/
 }
 
 .page {
     margin-top: 100px;
+}
+
+.box .profile_aa{
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
 }
