--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -21,7 +21,13 @@ search
 {% block content %}
 
     {% if error %}
-        <h1>No items found for this search</h1>
+        <div class = 'noresult_wrap'>
+        <p class ='count_item'>{{ all }} items</p>
+        <div class='noresult'>
+         <h1>No items found for this search</h1>
+         <button  onclick="location.href='/'">Back to main</button>
+        </div>
+        </div>
     {% else %}
 <div class = 'allwrap'>
 
@@ -31,13 +37,17 @@ search
 </div>
     <div class = 'wrap' >
          {% for drawing in page_obj %}
-        <article id="content" class = 'box' >
-
-                <img src="{% static '/img/칸딘 후추1.png' %}" alt="이미지">
+        <article id="content" class = 'box' onclick="location.href='/detail/{{ drawing.pk }}'">
+                <img src="{{ drawing.img }}" alt="이미지">
             <div class = 'post'>
+
                 <div class = 'post_left'>
-                    <p>owner:{{ drawing.owner }}</p>
-                    <p>title:{{ drawing.title }}</p>
+                    <img src="{{ drawing.owner.img }}" class='profile_aa'>
+                    <div>
+                        <p>{{ drawing.owner.nickname }}</p>
+                        <p>{{ drawing.title }}</p>
+                    </div>
+
                 </div>
                 <div class = 'post_right'>
                     <p>{{ drawing.buy_price }}won</p>
@@ -71,12 +81,12 @@ console.log("it's alive!")
 
 
 content = document.querySelector(".wrap");
-let page = 1
+let page = 2
 
 window.onscroll = function() {
     url = `?page=${page}&search={{ search }}`
-    // console.log(url)
-    if (window.innerHeight + window.scrollY+3 >= document.body.offsetHeight) {
+     {#console.log(url)#}
+    if (window.innerHeight + window.scrollY+1 >= document.body.offsetHeight) {
 
         fetch(url).then(res => {
             if (res.ok) {
@@ -87,19 +97,22 @@ window.onscroll = function() {
              console.dir(data)
             page += 1
             setTimeout(()=>{content.innerHTML += data.map(
-            	obj=>`<article id="content" class = 'box' >
-                <img src="{% static '/img/칸딘 후추1.png' %}" alt="이미지">
+            	obj=>`<article id="content" class = 'box' onclick="location.href='/detail/${obj.pk}'">
+                <img src="${obj.img}" alt="이미지" >
             <div class = 'post'>
                 <div class = 'post_left'>
-                    <p>owner:${obj.owner}</p>
-                    <p>title:${obj.title}</p>
+                    <img src="${obj.proimg}" class='profile_aa'>
+                    <div>
+                        <p>${obj.owner}</p>
+                        <p>${obj.title}</p>
+                    </div>
                 </div>
                 <div class = 'post_right'>
                     <p>${obj.buy_price}won</p>
                 </div>
             </div>
         </article>`
-            	).join("\n")},200)
+            	).join("\n")},300)
         }).catch(err => {
 
         })
@@ -108,4 +121,3 @@ window.onscroll = function() {
 </script>
 <!--무한스크롤 테스트-->
 {% endblock %}
-
