--- a/static/css/sign_up.css
+++ b/static/css/sign_up.css
@@ -24,6 +24,13 @@
     margin-top: 30px;
 }
 
+.profile-box{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .input-info {
     display: flex;
     flex-direction: column;
