--- a/static/css/buy.css
+++ b/static/css/buy.css
@@ -13,6 +13,12 @@ div#selleing_img {
     height: 35vw;
     background-color: aliceblue;
 }
+img.sales_img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
 div#img_info_area {
     text-align: left;
     margin-left: 2vw;
