--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -8,10 +8,17 @@ div#img_detail_box {
     border-radius: 10px;
     margin-top: 7vh;
 }
-div#selleing_img {
+div#selling_img {
     width: 30vw;
     height: 35vw;
     background-color: aliceblue;
+    overflow: hidden;
+}
+img.sales_img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
 div#img_info_area {
     text-align: left;
@@ -26,4 +33,10 @@ p#img_desc {
     margin-left: 1vw;
     color: #565656;
     font-size: 0.9rem;
+}
+
+/*모달팝업*/
+div#detail_modal {
+    display: flex;
+    flex-direction: column;
 }
