--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -37,7 +37,7 @@ search
 </div>
     <div class = 'wrap' >
          {% for drawing in page_obj %}
-        <article id="content" class = 'box' onclick="location.href='/detail/{{ drawing.pk }}'">
+        <article id="content" class = 'box' onclick="location.href='/detail/{{ drawing.owner.pk }}/{{ drawing.pk }}'">
                 <img src="{{ drawing.img }}" alt="이미지">
             <div class = 'post'>
 
@@ -97,7 +97,7 @@ window.onscroll = function() {
              console.dir(data)
             page += 1
             setTimeout(()=>{content.innerHTML += data.map(
-            	obj=>`<article id="content" class = 'box' onclick="location.href='/detail/${obj.pk}'">
+            	obj=>`<article id="content" class = 'box' onclick="location.href='/detail/${obj.owner_pk}/${obj.pk}'">
                 <img src="${obj.img}" alt="이미지" >
             <div class = 'post'>
                 <div class = 'post_left'>
