--- a/static/css/sign_up.css
+++ b/static/css/sign_up.css
@@ -31,6 +31,11 @@
     align-items: center;
 }
 
+#user-img{
+    width:300px;
+    height:500px;
+}
+
 .input-info {
     display: flex;
     flex-direction: column;
