--- a/static/css/sign_in.css
+++ b/static/css/sign_in.css
@@ -1,28 +1,28 @@
 .wrapper-signin {
     color: #555555;
-
-    margin-top: 30px;
+    margin-top: 100px;
     padding-bottom: 30px;
-    background-color: lightgrey;
-    width: 25%;
+    width: 500px;
     height: 100%;
-
-    border-radius: 5px;
-    box-shadow: 4px 4px grey;
+    border-radius: 20px;
+    border: 1px solid grey;
 }
 
-.container-signup {
+.container-signin {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin: 0 auto;
 }
 
 .title {
-    display: inline-block;
-    font-size: 15px;
+    font-size: 30px;
     font-weight: bolder;
     font-style: normal;
-
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-bottom: 15px;
 }
 
 #error-msg{
@@ -41,7 +41,27 @@
     margin-bottom: 7px;
 }
 
-.input-info {
-    margin-top: 7px;
-    margin-bottom: 7px;
+#sign-up-btn{
+    color:blue;
+    font-weight: bolder;
+}
+
+.input-box input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+    width: 300px;
+    height: 30px;
+    border-radius: 13px;
+    border: 1px solid grey;
+}
+
+.input-box button {
+    width: 100px;
+    padding: 3%;
 }
