--- a/static/css/sign_up.css
+++ b/static/css/sign_up.css
@@ -1,56 +1,85 @@
 .wrapper-signup {
     color: #555555;
-
     margin-top: 30px;
     padding-bottom: 30px;
-    background-color: lightgrey;
-    width: 25%;
+    width: 500px;
     height: 100%;
-
-    border-radius: 5px;
-    box-shadow: 4px 4px grey;
+    border-radius: 20px;
+    border: 1px solid grey;
 }
 
 .container-signup {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin: 0 auto;
 }
 
 .title {
     font-size: 30px;
     font-weight: bolder;
     font-style: normal;
-
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-bottom: 15px;
 }
 
-.profile-box{
+.type-box {
+    width: 400px;
+}
+
+.type-box p {
+    text-align: left;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 50px;
+}
+
+.type-box input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 50px;
+
+    width: 300px;
+    height: 30px;
+    border-radius: 13px;
+    border: 1px solid grey;
+}
+
+.test_image img {
+    width: 70%;
+    border-radius: 20px;
+    margin-top: 5px;
+}
+
+.answer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-#user-img{
-    width:300px;
-    height:500px;
+#answer::placeholder {
+    text-align: center;
 }
 
-.input-info {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    margin-top: 7px;
-    margin-bottom: 7px;
+.answer p {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-.label-info {
-    margin-top: 7px;
-    margin-bottom: 7px;
+.answer input {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-img {
- width: 300px;
+button {
+    padding: 3%;
 }
+
